# fastspell-dictionaries

./: LICENSE  README.md  pyproject.toml
src/fastspell_dictionaries/: ar.license  ast.license  ast_ES.dic  awa.aff  awa.dic  awa.license  az_AZ.license  bho.aff  bho.dic  bho.license  de_DE.license  et_ET.license  fa_IR.license  fur.aff  fur.license  gu_IN.license  hbs_Cyr_HBS.license  hbs_Lat_HBS.aff  hbs_Lat_HBS.license  ht_HT.dic  ht_HT.license  hu_HU.license  is_IS.license  ky_KG.dic  mag.aff  mag.dic  mag.license  mai_IN.aff  mai_IN.dic  mai_IN.license  mk_MK.aff  ml_IN.license  mn_MN.license  qu_BO.aff  qu_BO.dic  qu_BO.license  qu_EC.license  sc_IT.aff  sc_IT.dic  sc_IT.license  (+19 more)
